# fftp

./: README.md  fftp.py  pyproject.toml  requirements.txt
src/fftp/: fftp.py
