[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fftp"
version = "0.1.0"
authors = [
  { name="Samir Benzammour", email="samir.benzammour@gmail.com" },
]
description = "Quickly bootstrap an FTP server and quickly examine its logs."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyftpdlib>=2.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[project.scripts]
fftp = "fftp.fftp:main"

[project.urls]
homepage = "https://github.com/benzammour/fftp"
repository = "https://github.com/benzammour/fftp"


